--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+OPENAI_API_KEY="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"
+
 MONGODB_URL="mongodb+srv://jhonatan-oliveiradev:Jhonatan931002@cluster0.hhjo5lx.mongodb.net/?retryWrites=true&w=majority"
